# DiscorseBotLib

./: .gitignore  README.md  example_client.py  pyproject.toml
src/: API.py  __init__.py  bot.py  loop.py
src/base/: API.py  __init__.py  loop.py
