[tool.poetry]
name = "DiscorseBotLib"
version = "1.0.0"
description = "A bot lib for Discorse based Fourms"
authors = ["ShowierData9978"]
packages = [
    {include = "src"}
]
[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
